# note_counter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  binary_stream.c  binary_stream.h  ifs.c  ifs.h  iidx_1.c  iidx_1.h  iidx_note_count.c  iidx_note_count.h  kbinxml.c  kbinxml.h
test/: main.c
